# Nemea-Supervisor

./: Makefile.am  configure.ac
configs/: Makefile.am  amplification_detection.mkdir.in  brute_force_detector.mkdir.in  brute_force_hist_detector.mkdir.in  dnstunnel_detection.mkdir.in  flow_meter.mkdir.in  haddrscandetector.mkdir.in  hoststats.mkdir.in  ipblacklistfilter.mkdir.in  miner_detector.mkdir.in  multopt.mkdir.in  sip_bf_detector.mkdir.in  voipfrauddetection.mkdir.in  vportscandetector.mkdir.in
configs/detectors/: amplification_detection.sup.in  voipfrauddetection.sup.in
configs/loggers/: amplification_logger.sup.in  brute_force_hist_logger.sup.in  brute_force_logger.sup.in  dnstunnel_logger.sup.in  flowmeter_logger.sup.in  haddrscan_aggr_logger.sup.in  hoststats_logger.sup.in  ipblacklistfilter_logger.sup.in  miner_detector_logger.sup.in  sip_bf_logger.sup.in  voip_fraud_logger.sup.in  vportscan_aggr_logger.sup.in
systemd/: Makefile.am  nemea-supervisor.conf  nemea-supervisor.service.in
